fixed border radius on buttons and pictures, buttons are visible again

--- a/components/blog-card/blog-card.module.css
+++ b/components/blog-card/blog-card.module.css
@@ -10,6 +10,8 @@
   margin-bottom: 1.6rem;
   box-shadow: 1rem 1rem 2rem #797b84;
   font-size: 0;
+  border-radius: 0.2rem;
+  overflow: hidden;
 }
 
 .title {
