--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -16,6 +16,8 @@
   margin-top: 3.5rem;
   margin-bottom: auto;
   box-shadow: 1rem 1rem 2rem #857e7b;
+  border-radius: 0.2rem;
+  overflow: hidden;
 }
 
 .image {
