--- a/components/gallery-item/gallery-item.module.scss
+++ b/components/gallery-item/gallery-item.module.scss
@@ -74,6 +74,8 @@
   background-color: #510860;
   width: 100%;
   height: 100%;
+  border-radius: 0.3rem;
+  overflow: hidden;
 }
 
 // .description {
