--- a/components/slideshow/slideshow.module.css
+++ b/components/slideshow/slideshow.module.css
@@ -1,5 +1,5 @@
 .container {
-  /* position: relative; */
+  position: relative;
   /* margin: auto; */
   animation-name: fade;
   animation-duration: 1.5s;
@@ -25,7 +25,7 @@
   font-weight: bold;
   font-size: 1.8rem;
   transition: 0.6s ease;
-  border-radius: 0.7rem 0 0 0.7rem;
+  border-radius: 0.4rem 0 0 0.4rem;
   user-select: none;
   right: 0;
 }
@@ -48,7 +48,7 @@
   font-weight: bold;
   font-size: 1.8rem;
   transition: 0.6s ease;
-  border-radius: 0 0.7rem 0.7rem 0;
+  border-radius: 0 0.4rem 0.4rem 0;
   user-select: none;
 }
 
@@ -72,7 +72,7 @@
   font-weight: bold;
   font-size: 1.8rem;
   transition: 0.6s ease;
-  border-radius: 0.7rem 0.7rem 0 0;
+  border-radius: 0.4rem 0.4rem 0 0;
   user-select: none;
 }
 
