--- a/components/top-button/top-button.module.css
+++ b/components/top-button/top-button.module.css
@@ -2,15 +2,15 @@
   display: inline-block; /* Hidden by default */
   position: fixed; /* Fixed/sticky position */
   bottom: 1.5rem; /* Place the button at the bottom of the page */
-  right: 1rem; /* Place the button 30px from the right */
+  right: 1.5rem; /* Place the button 30px from the right */
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
   background-color: #d81e5b; /* Set a background color */
   color: white; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 1.5rem; /* Some padding */
-  border-radius: 1rem; /* Rounded corners */
+  padding: 1.5rem 1.5rem 1.6rem 1.5rem; /* Some padding */
+  border-radius: 0.3rem; /* Rounded corners */
   font-size: 1.62rem; /* Increase font size */
   font-weight: bold;
   opacity: 0.6;
